// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionDetails MsgBeginRedelegate has the expected html structure 1`] = `
<div
  class="tx__content"
>
  <begin-redelegate-message-details-stub
    class="tx__content__left"
    coin="[object Object]"
    session-address="cosmos1"
    transaction="[object Object]"
    validators="[object Object]"
  />
   
  <transactionfees-stub
    block="726616"
    class="tx__content__right"
    fees="[object Object]"
    time="2019-06-19T14:45:43.303Z"
  />
</div>
`;

exports[`TransactionDetails MsgCreateValidator has the expected html structure 1`] = `
<div
  class="tx__content"
>
  <create-validator-message-details-stub
    class="tx__content__left"
    session-address="cosmos1"
    transaction="[object Object]"
    validators="[object Object]"
  />
   
  <transactionfees-stub
    block="626102"
    class="tx__content__right"
    fees="[object Object]"
    time="2019-06-11T13:47:45.425Z"
  />
</div>
`;

exports[`TransactionDetails MsgDeposit has the expected html structure 1`] = `
<div
  class="tx__content"
>
  <deposit-message-details-stub
    class="tx__content__left"
    coin="[object Object]"
    session-address="cosmos1"
    transaction="[object Object]"
    validators="[object Object]"
  />
   
  <transactionfees-stub
    block="626103"
    class="tx__content__right"
    fees="[object Object]"
    time="2019-06-11T13:47:45.425Z"
  />
</div>
`;

exports[`TransactionDetails MsgEditValidator has the expected html structure 1`] = `
<div
  class="tx__content"
>
  <edit-validator-message-details-stub
    class="tx__content__left"
    session-address="cosmos1"
    transaction="[object Object]"
    validators="[object Object]"
  />
   
  <transactionfees-stub
    block="626102"
    class="tx__content__right"
    fees="[object Object]"
    time="2019-06-11T13:47:45.425Z"
  />
</div>
`;

exports[`TransactionDetails MsgSend 1 has the expected html structure 1`] = `
<div
  class="tx__content"
>
  <send-message-details-stub
    class="tx__content__left"
    coin="[object Object]"
    sessionaddress="cosmos1"
    transaction="[object Object]"
    validators="[object Object]"
  />
   
  <transactionfees-stub
    block="1086769"
    class="tx__content__right"
    fees="[object Object]"
    time="Mockday 2019-07-31T09:22:23.054Z GMT-0000 (MockDate)"
  />
</div>
`;

exports[`TransactionDetails MsgSend 2 has the expected html structure 1`] = `
<div
  class="tx__content"
>
  <send-message-details-stub
    class="tx__content__left"
    coin="[object Object]"
    sessionaddress="cosmos1"
    transaction="[object Object]"
    validators="[object Object]"
  />
   
  <transactionfees-stub
    block="1086769"
    class="tx__content__right"
    fees="[object Object]"
    time="Mockday 2019-07-31T09:22:23.054Z GMT-0000 (MockDate)"
  />
</div>
`;

exports[`TransactionDetails MsgSend 3 has the expected html structure 1`] = `
<div
  class="tx__content"
>
  <send-message-details-stub
    class="tx__content__left"
    coin="[object Object]"
    sessionaddress="cosmos1"
    transaction="[object Object]"
    validators="[object Object]"
  />
   
  <transactionfees-stub
    block="1086769"
    class="tx__content__right"
    fees="[object Object]"
    time="Mockday 2019-07-31T09:22:23.054Z GMT-0000 (MockDate)"
  />
</div>
`;

exports[`TransactionDetails MsgSend 4 has the expected html structure 1`] = `
<div
  class="tx__content"
>
  <send-message-details-stub
    class="tx__content__left"
    coin="[object Object]"
    sessionaddress="cosmos1"
    transaction="[object Object]"
    validators="[object Object]"
  />
   
  <transactionfees-stub
    block="1086769"
    class="tx__content__right"
    fees="[object Object]"
    time="Mockday 2019-07-31T09:22:23.054Z GMT-0000 (MockDate)"
  />
</div>
`;

exports[`TransactionDetails MsgSetWithdrawAddress has the expected html structure 1`] = `
<div
  class="tx__content"
>
  <set-withdraw-address-message-details-stub
    class="tx__content__left"
    session-address="cosmos1"
    transaction="[object Object]"
    validators="[object Object]"
  />
   
  <transactionfees-stub
    block="626102"
    class="tx__content__right"
    fees="[object Object]"
    time="2019-06-11T13:47:45.425Z"
  />
</div>
`;

exports[`TransactionDetails MsgSetWithdrawValidatorCommission has the expected html structure 1`] = `
<div
  class="tx__content"
>
  <withdraw-validator-commission-message-details-stub
    class="tx__content__left"
    session-address="cosmos1"
    transaction="[object Object]"
    validators="[object Object]"
  />
   
  <transactionfees-stub
    block="626102"
    class="tx__content__right"
    fees="[object Object]"
    time="2019-06-11T13:47:45.425Z"
  />
</div>
`;

exports[`TransactionDetails MsgUndelegate has the expected html structure 1`] = `
<div
  class="tx__content"
>
  <undelegate-message-details-stub
    class="tx__content__left"
    coin="[object Object]"
    session-address="cosmos1"
    transaction="[object Object]"
    validators="[object Object]"
  />
   
  <transactionfees-stub
    block="1248479"
    class="tx__content__right"
    fees="[object Object]"
    time="Mockday 2019-07-31T09:22:23.054Z GMT-0000 (MockDate)"
  />
</div>
`;

exports[`TransactionDetails MsgUndelegate has the expected html structure 2`] = `
<div
  class="tx__content"
>
  <delegate-message-details-stub
    class="tx__content__left"
    coin="[object Object]"
    session-address="cosmos1"
    transaction="[object Object]"
    validators="[object Object]"
  />
   
  <transactionfees-stub
    block="726599"
    class="tx__content__right"
    fees="[object Object]"
    time="2019-06-19T14:43:45.874Z"
  />
</div>
`;

exports[`TransactionDetails MsgUndelegate has the expected html structure 3`] = `
<div
  class="tx__content"
>
  <withdraw-delegation-reward-message-details-stub
    class="tx__content__left"
    session-address="cosmos1"
    transaction="[object Object]"
    validators="[object Object]"
  />
   
  <transactionfees-stub
    block="626102"
    class="tx__content__right"
    fees="[object Object]"
    time="2019-06-11T13:47:45.425Z"
  />
</div>
`;

exports[`TransactionDetails MsgUndelegate has the expected html structure 4`] = `
<div
  class="tx__content"
>
  <submit-proposal-message-details-stub
    class="tx__content__left"
    session-address="cosmos1"
    transaction="[object Object]"
    validators="[object Object]"
  />
   
  <transactionfees-stub
    block="626102"
    class="tx__content__right"
    fees="[object Object]"
    time="2019-06-11T13:47:45.425Z"
  />
</div>
`;

exports[`TransactionDetails MsgUnjail has the expected html structure 1`] = `
<div
  class="tx__content"
>
  <unjail-message-details-stub
    class="tx__content__left"
    session-address="cosmos1"
    transaction="[object Object]"
    validators="[object Object]"
  />
   
  <transactionfees-stub
    block="626102"
    class="tx__content__right"
    fees="[object Object]"
    time="2019-06-11T13:47:45.425Z"
  />
</div>
`;

exports[`TransactionDetails MsgVote has the expected html structure 1`] = `
<div
  class="tx__content"
>
  <vote-message-details-stub
    class="tx__content__left"
    session-address="cosmos1"
    transaction="[object Object]"
    validators="[object Object]"
  />
   
  <transactionfees-stub
    block="626103"
    class="tx__content__right"
    fees="[object Object]"
    time="2019-06-11T13:47:45.425Z"
  />
</div>
`;

exports[`TransactionDetails Unknown transaction returns empty string 1`] = `
<div
  class="tx__content"
>
  <send-message-details-stub
    class="tx__content__left"
    coin="[object Object]"
    sessionaddress="cosmos1"
    transaction="[object Object]"
    validators="[object Object]"
  />
   
  <transactionfees-stub
    block="1086769"
    class="tx__content__right"
    fees="[object Object]"
    time="Mockday 2019-07-31T09:22:23.054Z GMT-0000 (MockDate)"
  />
</div>
`;
